--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;800;900&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'M PLUS Rounded 1c', sans-serif; background-color: #9BE3F5; color: #334155; }
+    body { font-family: 'M PLUS Rounded 1c', sans-serif; background-color: #9BE3F5; color: #334155; height: 100dvh; margin: 0; }
+    #root { height: 100%; }
     .piggy-card { box-shadow: 6px 6px 0px rgba(0,0,0,0.15); border: 4px solid white; border-radius: 2rem; background: #FFF9C4; }
     .shadow-toon { box-shadow: 6px 6px 0px rgba(0,0,0,0.15); }
     ruby { ruby-position: over; } rt { font-size: 0.55em; color: #E53030; font-weight: 900; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
     select { -webkit-appearance: none; -moz-appearance: none; appearance: none; }
-    .animate-float { animation: float 3s ease-in-out infinite; }
-    @keyframes float { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
   </style>
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
-<body class="h-screen overflow-hidden">
-  <div id="root" class="h-full"></div>
+<body class="overflow-hidden">
+  <div id="root"></div>
   <script type="text/babel">
     const { useState, useEffect, useMemo } = React;
 
@@ -50,7 +49,7 @@
       const [currentIndex, setCurrentIndex] = useState(0);
       const [isPlaying, setIsPlaying] = useState(false);
       const [isLoop, setIsLoop] = useState(false);
-      const [isSingle, setIsSingle] = useState(false);
+      const [isSingleLoop, setIsSingleLoop] = useState(false);
       const [isShuffle, setIsShuffle] = useState(false);
       const [speed, setSpeed] = useState(SETTINGS.speed);
       const [voices, setVoices] = useState([]);
@@ -123,11 +122,11 @@
             const langCode = SETTINGS.language.split('-')[0];
             const vList = voices.filter(v => v.lang.startsWith(langCode));
             const femaleKeywords = /female|woman|girl|nanami|kyoko|sayaka|mizuki|mayu|shizuka|haruka|ayumi|siri|samantha|victoria|karen|moira|tessa|veena/i;
-            const maleKeywords = /male|man|ichiro|kenji|takumi|daichi|daniel|david/i;
+            const maleKeywords = /male|man|boy|ichiro|kenji|takumi|daichi|daniel|david/i;
             u.voice = vList.find(v => v.name.match(u.pitch > 1.1 ? femaleKeywords : maleKeywords)) || vList.find(v => v.name.match(femaleKeywords)) || vList[0];
          }
          u.onend = () => {
-            if(isSingle) setTimeout(() => speak(), 300);
+            if(isSingleLoop) setTimeout(() => speak(), 300);
             else if(isLoop) handleNext(true);
             else setIsPlaying(false);
          };
@@ -150,41 +149,52 @@
       const isTransVisible = showTransGlobal || showTransLocal;
 
       return (
-        <div className="max-w-md mx-auto h-full flex flex-col p-4 relative">
-          <div className="flex justify-between items-center mb-4 bg-white/90 border-4 border-white rounded-full shadow-toon p-2">
-            <span className="font-black text-[#E53030] text-xl ml-4">
-              {currentIndex + 1} / {playbackQueue.length}
-            </span>
-            
-            <div className="relative w-[50%]">
+        <div className="max-w-md mx-auto h-full flex flex-col p-4 relative overflow-hidden">
+          {/* Header Section - No Animation, Stacked Layout */}
+          <div className="flex flex-col items-center gap-3 mb-6 shrink-0 z-50">
+            {/* 1. Group Selector (Yellow) */}
+            <div className="relative w-full max-w-[280px]">
               <select 
                 value={selectedGroupId} 
                 onChange={(e) => setSelectedGroupId(e.target.value)}
-                className="w-full appearance-none bg-[#FFF9C4] border-4 border-white text-orange-600 font-black text-center text-sm py-2 px-6 rounded-2xl cursor-pointer shadow-inner outline-none truncate"
+                className="w-full appearance-none bg-[#FFF9C4] border-4 border-white text-[#D97706] font-black text-center text-base py-3 px-8 rounded-[1.5rem] cursor-pointer shadow-toon outline-none truncate"
               >
-                <option value="ALL">全部卡片组</option>
+                <option value="ALL">All Groups</option>
                 {groups.map(g => <option key={g.id} value={g.id}>{g.title}</option>)}
               </select>
-              <div className="absolute right-3 top-1/2 -translate-y-1/2 pointer-events-none text-orange-400">
-                <Icon name="layers" className="w-4 h-4" />
+              <div className="absolute right-4 top-1/2 -translate-y-1/2 pointer-events-none text-orange-400">
+                <Icon name="layers" className="w-5 h-5" />
               </div>
             </div>
 
-            <button onClick={() => { const s = [1.0, 0.8, 0.6]; setSpeed(s[(s.indexOf(speed)+1)%s.length]); }} className="bg-white border-2 border-orange-100 text-orange-600 px-3 py-1.5 rounded-xl font-black text-xs shadow-sm">
-              {speed}x
-            </button>
+            {/* 2. Current Group Name Badge (Green) */}
+            <div className="flex justify-center min-h-[44px]">
+                {card.groupTitle ? (
+                    <div className="bg-[#DCEDC8] px-6 py-2 rounded-full border-4 border-white flex items-center gap-2 shadow-toon">
+                        <Icon name="book-open" className="w-4 h-4 text-[#558B2F]" />
+                        <span className="text-sm font-black text-[#558B2F] tracking-wide uppercase">{card.groupTitle}</span>
+                    </div>
+                ) : null}
+            </div>
+
+            {/* 3. Index & Speed Control (White) */}
+            <div className="flex items-center gap-3 w-full max-w-[300px]">
+              <div className="flex-1 bg-white border-4 border-white rounded-full shadow-toon py-3 px-8 flex justify-center items-center">
+                 <span className="font-black text-[#E53030] text-3xl tracking-tight">
+                   {currentIndex + 1} <span className="text-slate-200 text-base mx-2 italic font-normal">/</span> {playbackQueue.length}
+                 </span>
+              </div>
+              <button 
+                onClick={() => { const s = [1.0, 0.8, 0.6]; setSpeed(s[(s.indexOf(speed)+1)%s.length]); }} 
+                className="bg-white border-4 border-white text-orange-600 w-16 h-16 rounded-full flex items-center justify-center font-black text-sm shadow-toon shrink-0 active:scale-95 transition-transform"
+              >
+                {speed}x
+              </button>
+            </div>
           </div>
 
-          {card.groupTitle && (
-            <div className="flex justify-center mb-4 animate-float">
-              <div className="bg-[#7FC241]/20 px-6 py-1.5 rounded-full border-2 border-[#7FC241]/30 flex items-center gap-2 shadow-inner">
-                <Icon name="book-open" className="w-4 h-4 text-[#7FC241]" />
-                <span className="text-xs font-black text-[#5D8F2E] tracking-wider uppercase">{card.groupTitle}</span>
-              </div>
-            </div>
-          )}
-
-          <div className="flex-1 overflow-y-auto space-y-4 pb-48 no-scrollbar">
+          {/* Card Content Section */}
+          <div className="flex-1 overflow-y-auto space-y-4 pb-48 no-scrollbar pr-1">
             <div className="piggy-card p-10 flex flex-col items-center justify-center bg-[#FFF9C4]">
               <button 
                 onClick={() => { if(isPlaying) { window.speechSynthesis.cancel(); setIsPlaying(false); } else { setIsPlaying(true); speak(); } }} 
@@ -223,23 +233,25 @@
             </div>
           </div>
 
+          {/* Footer Control Section */}
           <div className="fixed bottom-6 left-4 right-4 z-50">
             <div className="flex justify-center gap-4 mb-4">
                <button onClick={() => setShowOriginalGlobal(!showOriginalGlobal)} className={"px-8 py-2.5 rounded-2xl text-xs font-black border-4 shadow-toon transition-all " + (showOriginalGlobal ? 'bg-[#7FC241] text-white border-white' : 'bg-white text-slate-400 border-white')}>原文</button>
                <button onClick={() => setShowTransGlobal(!showTransGlobal)} className={"px-8 py-2.5 rounded-2xl text-xs font-black border-4 shadow-toon transition-all " + (showTransGlobal ? 'bg-[#FFAEC8] text-white border-white' : 'bg-white text-slate-400 border-white')}>译文</button>
             </div>
-            <div className="max-w-md mx-auto flex justify-between items-center gap-2 bg-white/90 p-4 rounded-[2.5rem] border-4 border-white shadow-2xl backdrop-blur-sm">
+            <div className="max-w-md mx-auto flex justify-between items-center gap-2 bg-white/95 p-4 rounded-[2.5rem] border-4 border-white shadow-2xl backdrop-blur-sm">
                 <button onClick={handlePrev} className="w-12 h-12 rounded-full bg-[#A2D2FF] text-white flex items-center justify-center border-2 border-white shadow-sm transition-all active:scale-90"><Icon name="skip-back" className="w-6 h-6"/></button>
                 <button onClick={() => setIsShuffle(!isShuffle)} className={"w-12 h-12 rounded-2xl border-4 transition-all flex items-center justify-center " + (isShuffle ? 'bg-[#F9E05E] border-white text-[#D97706] shadow-sm' : 'bg-slate-100 border-white text-slate-400')}><Icon name="shuffle" className="w-6 h-6"/></button>
-                <button onClick={() => { setIsSingle(!isSingle); if(!isSingle) setIsLoop(false); }} className={"w-12 h-12 rounded-2xl border-4 transition-all flex items-center justify-center " + (isSingle ? 'bg-orange-500 border-white text-white shadow-sm' : 'bg-slate-100 border-white text-slate-400')}><Icon name="repeat-1" className="w-6 h-6"/></button>
-                <button onClick={() => { setIsLoop(!isLoop); if(!isLoop) setIsSingle(false); }} className={"w-12 h-12 rounded-2xl border-4 transition-all flex items-center justify-center " + (isLoop ? 'bg-[#7FC241] border-white text-white shadow-sm' : 'bg-slate-100 border-white text-slate-400')}><Icon name="infinity" className="w-6 h-6"/></button>
+                <button onClick={() => { setIsSingleLoop(!isSingleLoop); if(!isSingleLoop) setIsLoop(false); }} className={"w-12 h-12 rounded-2xl border-4 transition-all flex items-center justify-center " + (isSingleLoop ? 'bg-orange-500 border-white text-white shadow-sm' : 'bg-slate-100 border-white text-slate-400')}><Icon name="repeat-1" className="w-6 h-6"/></button>
+                <button onClick={() => { setIsLoop(!isLoop); if(!isLoop) setIsSingleLoop(false); }} className={"w-12 h-12 rounded-2xl border-4 transition-all flex items-center justify-center " + (isLoop ? 'bg-[#7FC241] border-white text-white shadow-sm' : 'bg-slate-100 border-white text-slate-400')}><Icon name="infinity" className="w-6 h-6"/></button>
                 <button onClick={() => handleNext(false)} className="w-12 h-12 rounded-full bg-[#E53030] text-white flex items-center justify-center border-2 border-white shadow-sm transition-all active:scale-90"><Icon name="skip-forward" className="w-6 h-6"/></button>
             </div>
           </div>
         </div>
       );
     };
-    ReactDOM.createRoot(document.getElementById("root")).render(<Player />);
+    const root = ReactDOM.createRoot(document.getElementById("root"));
+    root.render(<Player />);
   </script>
 </body>
 </html>
